<resources>
    <string name="app_name">理工展パンフ</string>
    <string name="str_bnv_title_Top">トップ</string>
    <string name="str_bnv_title_Projects">企画</string>
    <string name="str_bnv_title_Time_Table">タイムテーブル</string>
    <string name="str_bnv_title_Info">インフォメーション</string>
    <string name="str_top_notification">お知らせ</string>
    <string name="str_sharing_dialog_choosing_ok">はい</string>
    <string name="str_sharing_dialog_choosing_ng">いいえ</string>
    <string name="str_general_interface_verification_title">
        確認
    </string>
    <string name="str_initial_TOS_title">
        利用規約の同意
    </string>
    <string name="str_initial_TOS_content_ng">
        利用規約に同意なさらなかったため、アプリを終了します。
    </string>
    <string name="str_initial_PP_title">
        プライバシーポリシーの同意
    </string>
    <string name="str_initial_PP_content_ng">
        プライバシーポリシーに同意なさらなかったため、アプリを終了します。
    </string>
    <string name="str_initial_questionnaire_explanation_1">
        早稲田大学理工展アプリをダウンロードしていただきありがとうございます。\n
        理工展運営の参考のため、アンケートの回答にご協力ください。
    </string>
    <string name="str_initial_questionnaire_explanation_2">
        提供していただいた情報はプライバシーポリシーに従って管理いたします。
    </string>
    <string name="str_initial_questionnaire_explanation_3">
        性別
    </string>
    <string-array name="str_initial_questionnaire_explanation_3_choice">
        <item>選択してください</item>
        <item>男性</item>
        <item>女性</item>
        <item>その他</item>
    </string-array>
    <string name="str_initial_questionnaire_explanation_4">
        年齢
    </string>
    <string-array name="str_initial_questionnaire_explanation_4_choice">
        <item>選択してください</item>
        <item>10歳未満</item>
        <item>10代</item>
        <item>20代</item>
        <item>30代</item>
        <item>40代</item>
        <item>50代</item>
        <item>60代</item>
        <item>70歳以上</item>
    </string-array>
    <string name="str_initial_questionnaire_explanation_5">
        職業
    </string>
    <string-array name="str_initial_questionnaire_explanation_5_choice">
        <item>選択してください</item>
        <item>未就学児</item>
        <item>小学生</item>
        <item>中学生</item>
        <item>高校生</item>
        <item>大学生(早大生)</item>
        <item>大学生(それ以外)</item>
        <item>高専・専門学校生</item>
        <item>社会人</item>
        <item>その他</item>
    </string-array>
    <string name="str_initial_questionnaire_explanation_6">
        理工展アプリを知ったきっかけ
    </string>
    <string-array name="str_initial_questionnaire_explanation_6_choice">
        <item>選択してください</item>
        <item>前回・前々回の理工展で知った</item>
        <item>家族・知人から聞いた</item>
        <item>理工展公式サイトを見た</item>
        <item>SNSを見た</item>
        <item>ポスターを見た</item>
        <item>その他</item>
    </string-array>
    <string name="str_initial_questionnaire_explanation_7">
        理工展のご来場は今回で何回目ですか？
    </string>
    <string-array name="str_initial_qustionnaire_explanation_7_choice">
        <item>選択してください</item>
        <item>今回が初めて</item>
        <item>2回目</item>
        <item>3回目</item>
        <item>4回目</item>
        <item>5回以上</item>
    </string-array>
    <string name="str_initial_questionnaire_explanation_8">
        送信
    </string>
    <string name="str_top_walkrally_bt_dialog_title">
        今年のウォークラリーについて
    </string>
    <string name="str_top_walkrally_bt_dialog_content">
        今年の理工展はオンライン開催のため、ウォークラリーの開催はありません。\n代わりにバーチャル理工展アプリでキャンパス内を歩き回ることができます。\nぜひお楽しみください！
    </string>
    <string name="str_top_aryaguchi_notification_title">
        AR矢口くん
    </string>
    <string name="str_top_aryaguchi_notification_content_ok">
        こどもへ\n
        「AR矢口くん」であそぶときは、お母さんお父さんからはなれずに、みのまわりによくちゅういしてあそびましょう！\n\n
        大人へ\n
        「AR矢口くん」をお子様がお遊びになる際は、くれぐれも目を離さずに、周辺に危険な障害物などがないかのご確認をお願い申し上げます。
    </string>
    <string name="str_top_aryaguchi_notification_content_ng">
        「AR矢口くん」は別アプリで、別途ダウンロード必要です。ダウンロードしてもよろしいですか？
    </string>
    <string name="str_top_virtual_rikoten_notification_title">
        バーチャル理工展
    </string>
    <string name="str_top_virtual_rikoten_notification_content_ng">
        「バーチャル理工展」は別アプリで、別途ダウンロード必要です。ダウンロードしてもよろしいですか？
    </string>
    <string name="str_top_virtual_rikoten_button">
        バーチャル理工展
    </string>
    <string name="str_top_aryaguchi_button">
        AR矢口くん
    </string>
    <string name="str_top_rikoten_no1_button">
        理工展No.1
    </string>
    <string name="str_top_rikoten_this_year_button">今年の理工展</string>
    <string name="str_top_rikoten_no1_notification_title">
        理工展No.1
    </string>
    <string name="str_top_rikoten_no1_notification_content_ng">
        この機能はまだ実装中です。アップデートをお待ちください。
    </string>
    <string name="str_term_of_use">
利用規約\n
早稲田大学理工展パンフレットアプリをダウンロードして頂きありがとうございます。この利用規約(以下「本規約」とします。)は、理工展の運営を行う早稲田大学理工展連絡会(以下「本連絡会」とします。)が提供する「早稲田大学理工展パンフレットアプリ」(以下「本アプリ」とします。)と本アプリのサービス（以下「本サービス」とします。）の利用条件などを定めたものです。\n
※本連絡会が提供する「バーチャル理工展アプリ」の利用規約、プライバシーポリシーにつきましては、別途「バーチャル理工展アプリ」内でご確認ください。\n
\n
第1条　はじめに\n
本アプリを利用する方(以下「利用者」とします。)は、本規約に同意しこれを遵守しなければなりません。本規約に同意しない場合は、本アプリの利用を中止してください。\n
\n
第2条　個人情報の取り扱い\n
本アプリで取得した利用者情報の取り扱いについては、別途定める「プライバシーポリシー」に従うものとします。\n
\n
第3条　禁止行為\n
本アプリを利用する際は、以下の行為を行うことを禁止します。行った場合は、事前の通知なく該当者の本アプリの利用を停止する場合があります。\n
（1）法令または公序良俗に違反する行為、及びそれらの行為を助長する行為\n
（2）犯罪行為に関連する行為\n
（3）本アプリのサーバーまたはネットワーク機能の破壊や妨害\n
（4）本アプリのサービスの運営、維持、利用を妨害、または妨害するおそれのある行為\n
（5）本サービスの削除または改変\n
（6）本サービス又はコンテンツの提供のために使用されているソフトウェアのいずれかの解読、逆コンパイル、分解又はリバースエンジニアリング\n
（7）本連絡会、本アプリの他の利用者または第三者の知的財産権、肖像権、プライバシー権、名誉その他の権利または利益の侵害\n
（8）その他、本連絡会が不適切と判断する行為\n
\n
第4条　免責事項\n
本アプリを利用する際は、以下の項目を承諾の上ご利用ください。\n
1．本連絡会は、本アプリに対し、以下の項目について一切の保証を行いません。\n
（1） OS のバージョンアップやアプリケーションのアップデートにより、利用機器に不具合、誤作動や障害が生じないこと\n
（2） 本アプリの利用により、利用機器に不具合、誤作動や障害が生じないこと\n
（3） 本アプリが常に正しく機能すること\n
（4） 本アプリが永続して利用できること\n
（5） 本アプリの利用に中断またはエラーが発生しないこと\n
2．本連絡会は、本アプリの利用方法に関する個別のサポートは一切行いません。\n
3．本サービスは、本連絡会の都合で事前の予告なく変更、追加、中断、削除する場合がございます。\n
4．本連絡会は、利用者が本アプリを利用したことまたは本アプリが利用できないことにより利用者に生じた身体的、精神的、経済的損害を含むいかなる損害についてもその責任を負いません。\n
5．本アプリの利用料は無料ですが、必要な端末機器、通信設備、通信料等の費用は利用者の負担とします。\n
\n
第5条　知的財産権\n
(本アプリの機能「AR矢口くん」に関しては第7条を参照してください。)\n
本アプリ及びその複製物（プログラム・画像・ドキュメント等を含む）は、著作権法およびその他知的財産権に関する法律によって保護されており、著作権その他一切の権利は本連絡会及び該当する理工展参加団体に属するものとします。\n
利用者は、本規約に基づき本アプリに関する非独占的で譲渡不能の使用権のみが許諾されるものであり、本アプリ及びその複製物に関していかなる所有権、著作権その他の一切の権利を有するものではありません。\n
\n
第6条　第三者のウェブサイトまたはリソース\n
本サービスには、第三者のウェブサイトまたはリソースへのリンクが含まれることがあります。本連絡会はこれらのウェブサイトもしくはリソース、またはこれらのウェブサイトに表示されるリンクから利用可能なコンテンツ、プロダクトまたはサービスに関して責任を負いません。\n
\n
第7条　AR矢口くん\n
1．本アプリの機能「AR矢口くん」を利用する際は、以下の項目を承諾の上ご利用ください。承諾できない場合、本機能の利用を停止する場合があります。\n
（1）利用前に周囲の安全を確認すること\n
（2）自分または他人に危険を及ぼすおそれのある行為を行わないこと\n
（3）他人の迷惑となるおそれのある行為を行わないこと\n
2．「AR矢口くん」を用いて撮影した画像(以下「AR矢口くん画像」とします。)については以下の項目をご確認ください。\n
（1）AR矢口くん画像は、著作権法およびその他知的財産権に関する法律によって保護されており、著作権その他一切の権利は本委員会に属するものとします。\n
（2）本連絡会は、利用者がAR矢口くん画像を私的に利用することを認めます。\n
（3）本連絡会は、利用者がAR矢口くん画像をwebサイトやSNSなどのサービスにおいて自由に公開することを認めます(公序良俗に反する画像はこの限りではありません)。\n
（4）個人情報が特定できる状態での画像の投稿には十分お気をつけください。\n
\n
第8条　準拠法・裁判管轄\n
本規約の準拠法は日本法であり、本アプリに起因または関連して利用者と本連絡会との間に生じた紛争については東京地方裁判所を第一審の専属的合意管轄裁判所とします。\n
\n
第9条　規約の変更\n
本規約は、予告なく変更されることがあります。変更について利用者に通知することは致しませんので、本アプリを利用する際は、随時最新の利用規約をご確認ください。\n
本アプリや本規約、プライバシーポリシーなどに関してご意見やご不明な点がありましたら以下のお問い合わせフォームから入力して下さい。\n
\n
お問い合わせフォーム\n
https://forms.gle/oFCHWi4CQPpw2CkQA\n
\n
早稲田大学理工展連絡会\n
〒162-0052　東京都新宿区戸山1-24-1 M-38 理工展連絡会\n
\n
2018年10月13日　制定・施行\n
2018年11月3日　改訂\n
2019年9月18日　改訂\n
2020年10月15日　改訂\n


    </string>
    <string name="str_privacy_policy">
プライバシーポリシー\n
早稲田大学理工展パンフレットアプリをダウンロードして頂きありがとうございます。このプライバシーポリシー(以下「本ポリシー」とします。)は、理工展の運営を行う早稲田大学理工展連絡会(以下「本連絡会」とします。)が提供する「早稲田大学理工展パンフレットアプリ」(以下「本アプリ」とします。)における個人情報やそれに基づく情報の取り扱いを定めたものです。\n
※本連絡会が提供する「バーチャル理工展アプリ」のプライバシーポリシーにつきましては、別途「バーチャル理工展アプリ」内でご確認ください。\n
\n
1.  個人情報の定義\n
プライバシー情報のうち「個人情報」とは、個人情報保護法にいう「個人情報」を指すものとし、生存する個人に関する情報であって、当該情報に含まれる氏名、生年月日、住所、その他の記述等により特定の個人を識別できる情報を指します。\n
\n
2.  提供していただく利用者の個人情報と取得方法、取得目的\n
（1）年齢・性別・職業と本アプリを知ったきっかけ・理工展来場回数・端末のOS\n
取得方法：本アプリ初回起動時のアンケート\n
取得目的：本アプリ制作・理工展運営の参考\n
（2）閲覧した企画情報\n
取得方法：企画詳細画面のクリック時に取得\n
取得目的：本アプリの利用状況の調査及び分析、本アプリ制作・理工展運営の参考\n
（3）本アプリの各ボタンのクリック情報\n
取得方法：各ボタンのクリック時に取得\n
取得目的：本アプリの利用状況の調査及び分析、本アプリ制作・理工展運営の参考\n
（4）お問い合わせ内容\n
取得方法：お問い合わせフォーム(https://forms.gle/oFCHWi4CQPpw2CkQA)から入力\n
取得目的：本アプリ制作の参考\n
\n
3.  個人情報の管理\n
本連絡会は、個人情報の紛失・破損・改ざん・漏洩などを防止するため、管理体制の整備等の必要な措置を講じ、個人情報の厳重な管理を行います。\n
\n
4.  情報の開示及び提供\n
以下の場合を除き、取得した個人情報を第三者に開示または提供することはございません。\n
（1）法令に基づく場合であって、本人の同意を得ることが困難であるとき\n
（2）人の生命，身体または財産の保護のために必要がある場合であって，本人の同意を得ることが困難であるとき\n
（3）公衆衛生の向上または児童の健全な育成の推進のために特に必要がある場合であって、本人の同意を得ることが困難であるとき\n
（4）国の機関もしくは地方公共団体またはその委託を受けた者が法令の定める事務を遂行することに対して協力する場合があって、本人の同意を得ることにより当該事務の遂行に支障を及ぼす恐れがあるとき\n
\n
5.  個人情報の訂正、追加、削除、利用停止\n
利用者からの個人情報の訂正、追加、削除、利用停止のご希望に個別に対応することは致しかねますのでご了承ください。\n
\n
6.  プライバシーポリシーの変更\n
本ポリシーは、予告なく変更されることがあります。変更について利用者に通知することは致しません。本アプリを利用する際は、随時最新のプライバシーポリシーをご確認ください。\n
\n
早稲田大学理工展連絡会\n
〒162-0052　東京都新宿区戸山1-24-1 M-38 理工展連絡会\n
\n
2018年10月13日　制定・施行\n
2019年9月18日    改訂\n
2020年10月15日　改訂\n
    </string>
    <string name="str_version_verification_is_latest">
お使いの理工展アプリは最新のバージョンです。このままお使い続けてください。
    </string>
    <string name="str_version_verification_is_not_latest">
お使いの理工展アプリは最新のバージョンではありません。お手数ですが、ストアでアップデートしてからお使いになってください。
    </string>
    <string name="str_project_list_explain_all">
        全部の企画
    </string>
    <string name="str_project_list_explain_genre">
        以下のタグを含みます：　
    </string>
    <string name="str_project_list_explain_history">
        企画の履歴
    </string>
    <string name="str_project_list_explain_favorite">
        お気に入りの企画
    </string>
    <string name="str_project_list_explain_random">
        ランダムで表示
    </string>
    <string name="str_project_list_explain_popular">
        人気の企画
    </string>
    <string name="str_project_detail_share_front">
        私の理工展のオススメ企画は『
    </string>
    <string name="str_project_detail_share_back">
        』です！\n
        https://apple.co/2lvZObO\n
    </string>
    <string name="str_project_detail_verification_message_out_of_rikoten_span">
        ただいま理工展の開催時間外ですので、バーチャル理工展での教室内には企画独自の展示はございませんが、
        それでもバーチャル理工展を起動してよろしいでしょうか？\n\n
        なお、理工展の開催時間は以下の通りです。\n
        ・ 11/7(土) 09:00 ~ 20:00\n
        ・ 11/8(日) 09:00 ~ 20:00
    </string>
    <string name="str_project_detail_notification_message_web_out_of_rikoten_span">
        ただいま理工展の開催時間外ですので、理工展Webでの団体のページのへのアクセスはできません。\n
        開始までお待ちください。\n
        なお、理工展の開催時間は以下の通りです。\n
        ・ 11/7(土) 09:00 ~ 20:00\n
        ・ 11/8(日) 09:00 ~ 20:00
    </string>
    <string name="str_project_detail_notification_how_to_attend_live_event">
        この企画はライブ配信企画です。\n
        この企画に参加するには、「ライブ配信」のボタン、もしくは「理工展Webサイトで見る」ボタンを押す必要があります。
    </string>
    <string name="str_projects_list_search">
        以下の条件で検索しています。
    </string>
    <string name="str_projects_list_conditions">
        条件たち
    </string>
    <string name="str_project_detail_tags">
        この企画のタグ
    </string>
    <string name="str_project_detail_share_projects">
        企画をシェアする
    </string>
    <string name="str_project_detail_project_page_link">
        企画ページリンク
    </string>
    <string name="str_project_detail_project_description">
        企画概要
    </string>
    <string name="str_project_detail_project_description_detail">
        企画詳細
    </string>
    <string name="str_project_detail_group_description">
        団体紹介
    </string>
    <string name="str_project_detail_link_to_group">
        団体へのリンク
    </string>
    <string name="str_time_table_ng_notification_title">
        確認
    </string>
    <string name="str_time_table_ng_notification_detail">
        申し訳ありませんが、理工展の時間外ですのでタイムテーブルはまだ見れません。\n
        なお、理工展の開催時間は以下の通りです。\n
        ・ 11/7(土) 09:00 ~ 20:00\n
        ・ 11/8(日) 09:00 ~ 20:00
    </string>
    <string name="str_time_table_tab_day1">
        1日目（11/7）
    </string>
    <string name="str_time_table_tab_day2">
        2日目(11/8)
    </string>
    <string name="str_information_list_fragment_official_urls">
        理工展公式リンク
    </string>
    <string name="str_information_list_fragment_official_web">
        公式ホームページ
    </string>
</resources>