<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/str_initial_questionnaire_explanation_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/str_initial_questionnaire_explanation_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/str_initial_questionnaire_explanation_3" />

            <Spinner
                android:id="@+id/initial_questionnaire_gender_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="20dp"
                android:entries="@array/str_initial_questionnaire_explanation_3_choice"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/str_initial_questionnaire_explanation_4" />

            <Spinner
                android:id="@+id/initial_questionnaire_age_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="20dp"
                android:entries="@array/str_initial_questionnaire_explanation_4_choice"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/str_initial_questionnaire_explanation_5" />

            <Spinner
                android:id="@+id/initial_questionnaire_job_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="20dp"
                android:entries="@array/str_initial_questionnaire_explanation_5_choice"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/str_initial_questionnaire_explanation_6" />

            <Spinner
                android:id="@+id/initial_questionnaire_trigger_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="20dp"
                android:entries="@array/str_initial_questionnaire_explanation_6_choice"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/str_initial_questionnaire_explanation_7" />

            <Spinner
                android:id="@+id/initial_questionnaire_how_many_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="20dp"
                android:entries="@array/str_initial_qustionnaire_explanation_7_choice"
                android:spinnerMode="dialog" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>