<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Top.TopFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Top.TopFragment">

    <technolifestyle.com.imageslider.FlipperLayout
        android:id="@+id/top_image_flipper_fl"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_image_flipper_fl">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <at.markushi.ui.CircleButton
                android:id="@+id/top_virtual_rikoten_bt"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_virtual_rikoten_button_top"
                app:cb_color="#DF4B82"
                app:cb_pressedRingWidth="16dp" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:text="@string/str_top_virtual_rikoten_button"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <at.markushi.ui.CircleButton
                android:id="@+id/top_aryaguchi_bt"
                android:layout_width="60dp"
                android:layout_height="54dp"
                android:layout_marginRight="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_aryaguchi_button_top"
                app:cb_color="#DF4B82"
                app:cb_pressedRingWidth="16dp" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/str_top_aryaguchi_button"
                android:textSize="11.5sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <at.markushi.ui.CircleButton
                android:id="@+id/top_rikoten_this_year_bt"
                android:layout_width="60dp"
                android:layout_height="54dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="4dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_what_is_rikoten_button_top"
                app:cb_color="@color/common_google_signin_btn_text_dark_disabled"
                app:cb_pressedRingWidth="16dp" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/str_top_rikoten_this_year_button"
                android:textSize="11.5sp" />

        </LinearLayout>
        　　
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/str_top_notification"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_news_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>